fix(esl-footnotes): drop extra margins for `esl-carousel-slides` container

--- a/src/modules/esl-carousel/core/esl-carousel.less
+++ b/src/modules/esl-carousel/core/esl-carousel.less
@@ -15,6 +15,7 @@ esl-carousel {
   [esl-carousel-slides] {
     position: relative;
     width: 100%;
+    margin: 0;
     display: flex;
     gap: 20px;
     z-index: 0;
